Fixed spacing issue in nav bar.

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -26,7 +26,6 @@ h1, h2, h3, h4 {
 }
 
 #nav ul {
-  overflow: hidden;
   color: black;
   font-size: 16px;
   list-style-type: none;
