--- a/server/public/stylesheets/main2020.css
+++ b/server/public/stylesheets/main2020.css
@@ -38,6 +38,7 @@ h1, h2, h3, h4 {
   justify-content: center;
   display: flex;
   margin: auto;
+  min-width: 800px;
 }
 #nav ul {
   overflow: hidden;
@@ -52,14 +53,15 @@ h1, h2, h3, h4 {
   float: center;
   display: block;
   padding: 2px;
-  padding-right: 14px;
+  padding-right: 10px;
+  padding-left: 5px;
   font-family: 'Sora', sans-serif;
   font-size: 18px;
   font-weight: bold;
   color: #130220;
   text-shadow: 1px 1px 2px #cd97db;
   cursor: pointer;
-  overflow: hidden;
+
   display: flex;
   flex-wrap: wrap;
 }
@@ -108,6 +110,7 @@ a {
   padding-top: 2%;
   display: flex;
   width: 60%;
+  min-width: 500px;
 }
 
 #portfolio {
